opam-version: "2.0"
maintainer: "git@identity-function.com"
authors: ["Mindy Preston"]
homepage: "https://github.com/yomimono/ocaml-test-base"
bug-reports: "https://github.com/yomimono/ocaml-test-base/issues"
dev-repo: "git+https://github.com/yomimono/ocaml-test-base.git"
license: "MIT"
build:
[[ "jbuilder" "build" "-j" jobs "@install" ]]
run-test:
[[ "jbuilder" "build" "-j" jobs "@fuzz" "--no-buffer" ]]
depends: [
  "base"
  "crowbar"
  "jbuilder" {build}
  "bun"
]
